--- a/vba-files/Class/clsViewModel.cls
+++ b/vba-files/Class/clsViewModel.cls
@@ -111,19 +111,19 @@ End Property
 
 ' Methods
 Public Function SetDetailByID(idx As Double)
-    Detail = GetThingByID(This.Model.Details, idx)
+    Detail = This.Model.GetThingByID(This.Model.Details, idx)
 End Function
 
 Public Function SetEntityByID(idx As Double)
-    Entity = GetThingByID(This.Model.entities, idx)
+    Entity = This.Model.GetThingByID(This.Model.entities, idx)
 End Function
 
 Public Function SetEntityTypeByID(idx As Double)
-    EntityType = GetThingByID(This.Model.EntityTypes, idx)
+    EntityType = This.Model.GetThingByID(This.Model.EntityTypes, idx)
 End Function
 
 Public Function SetCommitByID(idx As Double)
-    Commit = GetThingByID(This.Model.Commits, idx)
+    Commit = This.Model.GetThingByID(This.Model.Commits, idx)
 End Function
 
 Public Function ReplaceSubform(ByRef sfrm As Subform)
@@ -189,16 +189,4 @@ Public Function SearchEntity(tb As textbox, lb As ListBox)
     For Each Entity In filteredEntities
         lb.AddItem CStr(Entity.ID) & ";" & Entity.name
     Next Entity
-End Function
-
-' Private Methods
-Private Function GetThingByID(thingCollection As Collection, idx As Double) As IThing
-    Dim thisThing As IThing
-    For Each thisThing In thingCollection
-        If thisThing.ID = idx Then
-            Set GetThingByID = thisThing
-            Exit Function
-        End If
-    Next thisThing
-    Err.Raise 5, , "GetThingByID failed!"
 End Function
