--- a/vba-files/Class/clsCommitViewModel.cls
+++ b/vba-files/Class/clsCommitViewModel.cls
@@ -12,14 +12,14 @@ Option Explicit
 
 Private Const COMMITS_TO_DISPLAY As Integer = 5
 
-Public Event RecordIDChanged()
+Public Event CommitChanged()
 
 Private Type TCommitViewModel
     AutofillType As String
     AutofillData As String
     RecordID As Double
     Commit As clsCommit
-    Model As clsModel
+    Model As clsDataModel
 End Type
 Private This As TCommitViewModel
 
@@ -39,28 +39,16 @@ Public Property Let AutofillData(ByVal RHS As String)
     This.AutofillData = RHS
 End Property
 
-' TODO Refactor this into (prop) Commit
-'Public Property Get RecordID() As Double
-'    RecordID = This.RecordID
-'End Property
-
-'Public Property Let RecordID(RHS As Double)
-'    This.RecordID = RHS
-'    RaiseEvent RecordIDChanged
-'End Property
-
 Public Property Get Commit() As clsCommit
     Set Commit = This.Commit
 End Property
 
 Public Property Set Commit(ByRef RHS As clsCommit)
     Set This.Commit = RHS
-    RaiseEvent RecordIDChanged
+    RaiseEvent CommitChanged
 End Property
 
 Public Function IsValid() As Boolean
-    If AutofillType = vbNullString Then Exit Function
-    If AutofillData = vbNullString Then Exit Function
     If Commit Is Nothing Then Exit Function
     IsValid = True
 End Function
@@ -72,13 +60,13 @@ Public Function CanAutofill() As Boolean
 End Function
 
 Private Sub Class_Initialize()
-    Set This.Model = New clsModel
+    Set This.Model = New clsDataModel
     This.AutofillType = -1
 End Sub
 
 Public Function SetCommitByID(idx As Double)
     Dim aCommit As clsCommit
-    Set This.Model = New clsModel
+    Set This.Model = New clsDataModel
     Set aCommit = This.Model.GetThingByID(This.Model.Commits, idx)
     Set Commit = aCommit
 End Function
