--- a/Export/clsEventTest.cls
+++ b/Export/clsEventTest.cls
@@ -10,23 +10,22 @@ Attribute VB_Exposed = False
 Option Compare Database
 Option Explicit
 
-Private Enum RAGColors
-    Default = 16777215
-    Red = 13421823
-    yellow = 13431551
-    green = 14282978
-End Enum
-
 Private WithEvents tb As Access.textbox
 Attribute tb.VB_VarHelpID = -1
 
+Public Sub Class_Initialize()
+    Err.Raise 5, , "DEPREC"
+End Sub
+
 Public Property Set SetTextbox(textbox As Access.textbox)
+    Err.Raise 5, , "DEPREC"
     Set tb = textbox
     tb.OnChange = "" '"[Event Procedure]"
     tb.OnExit = "[Event Procedure]"
 End Property
 
 Private Sub tb_Change()
+    Err.Raise 5, , "DEPREC"
     Debug.Print tb.Parent.name & "!" & tb.name & "_Change()"
     Dim tbBefore As textbox
     Set tbBefore = tb.Parent.controls(Replace(tb.name, "txtAfter", "txtBefore"))
@@ -42,6 +41,7 @@ End Sub
 
 
 Private Sub tb_Exit(Cancel As Integer)
+    Err.Raise 5, , "DEPREC"
     Debug.Print tb.Parent.name & "!" & tb.name & "_Exit()"
     Dim tbBefore As textbox
     Set tbBefore = tb.Parent.controls(Replace(tb.name, "txtRHS", "txtLHS"))
