--- a/Export_index_ORM/IRecordCollection.cls
+++ b/Export_index_ORM/IRecordCollection.cls
@@ -9,25 +9,22 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-'@Folder("index_ORM")
+'@Folder "ORM.Interfaces"
 '@Interface
 
 Public Property Get Items() As Collection
 End Property
 
-Public Property Get NewEnum() As IUnknown
-End Property
-
 Public Property Get Count() As Long
 End Property
 
-Public Property Get TableName() As String
+Public Property Get tableName() As String
 End Property
 
-Public Property Let TableName(ByVal TableName As String)
+Public Property Let tableName(ByVal tableName As String)
 End Property
 
-Public Property Get Self() As EntityTypes
+Public Property Get Self() As IRecordCollection
 End Property
 
 Public Sub Load()
@@ -35,3 +32,6 @@ End Sub
 
 Public Sub Clear()
 End Sub
+
+Public Function GetByID(ID As Double) As IRecord
+End Function
